[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/UI/rectangle-menu.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/rectangle-menu-selected.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/fond-menu2.jpg" type="Texture" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Scripts/BoutonsOptions.gd" type="Script" id=5]
[ext_resource path="res://Scripts/0_LangueOptions.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Menu.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Menu/EnsembleReglages2.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Menu/EnsembleReglages.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/UI/rectangle-menu02.png" type="Texture" id=10]
[ext_resource path="res://Audio/Musiques/Loyalty Freak Music - ROLLER DISCO DANCE DANCE - 08 Last Energy For The Day.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/UI/rectangle-menu-selected02.png" type="Texture" id=12]
[ext_resource path="res://Shaders/flou.tres" type="Material" id=14]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fond" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 6.10352e-05
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flou" type="TextureRect" parent="."]
material = ExtResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.12
anchor_right = 0.5
anchor_bottom = 0.12
margin_left = -492.0
margin_top = -42.4
margin_right = 484.0
margin_bottom = 38.6
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Langues" type="TextureButton" parent="VBoxContainer"]
margin_left = 155.0
margin_right = 374.0
margin_bottom = 81.0
focus_neighbour_right = NodePath("../Reglages")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Langues" type="RichTextLabel" parent="VBoxContainer/Langues"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -26.25
margin_right = 100.0
margin_bottom = 26.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Langues[/center]"
text = "Langues"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reglages" type="TextureButton" parent="VBoxContainer"]
margin_left = 378.0
margin_right = 597.0
margin_bottom = 81.0
focus_neighbour_left = NodePath("../Langues")
focus_neighbour_right = NodePath("../Retour")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="Reglages" type="RichTextLabel" parent="VBoxContainer/Reglages"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.888
margin_top = -26.25
margin_right = 98.1123
margin_bottom = 26.25
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Réglages[/center]"
text = "Réglages"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour" type="TextureButton" parent="VBoxContainer"]
margin_left = 601.0
margin_right = 820.0
margin_bottom = 81.0
focus_neighbour_left = NodePath("../Reglages")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="Retour" type="RichTextLabel" parent="VBoxContainer/Retour"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -26.25
margin_right = 100.0
margin_bottom = 26.25
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Retour[/center]"
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GestionLangues" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = -113.5
margin_right = 109.5
margin_bottom = 113.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Francais" type="TextureButton" parent="GestionLangues"]
margin_right = 219.0
margin_bottom = 73.0
focus_neighbour_top = NodePath("../../VBoxContainer/Langues")
focus_neighbour_bottom = NodePath("../Anglais")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="Francais" type="RichTextLabel" parent="GestionLangues/Francais"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -26.25
margin_right = 100.0
margin_bottom = 26.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Français[/center]"
text = "Français"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anglais" type="TextureButton" parent="GestionLangues"]
margin_top = 77.0
margin_right = 219.0
margin_bottom = 150.0
focus_neighbour_top = NodePath("../Francais")
focus_neighbour_bottom = NodePath("../Retour2")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="Anglais" type="RichTextLabel" parent="GestionLangues/Anglais"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -26.25
margin_right = 100.0
margin_bottom = 26.25
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Anglais[/center]"
text = "Anglais"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retour2" type="TextureButton" parent="GestionLangues"]
margin_top = 154.0
margin_right = 219.0
margin_bottom = 227.0
focus_neighbour_top = NodePath("../Anglais")
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 2 )

[node name="Retour2" type="RichTextLabel" parent="GestionLangues/Retour2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.5
margin_top = -27.0
margin_right = 96.5
margin_bottom = 25.5
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 7 )
bbcode_enabled = true
bbcode_text = "[center]Retour[/center]"
text = "Retour"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="EnsembleReglages" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CheckButton" parent="EnsembleReglages" index="0"]
focus_neighbour_right = NodePath("../../EnsembleReglages2/contraste")

[node name="Azerty" parent="EnsembleReglages" index="3"]
focus_neighbour_right = NodePath("../../EnsembleReglages2/Saturation")

[node name="Qwerty" parent="EnsembleReglages" index="4"]
focus_neighbour_right = NodePath("../../EnsembleReglages2/Teinte")

[node name="lum" parent="EnsembleReglages" index="6"]
focus_neighbour_bottom = NodePath("../../EnsembleReglages2/contraste")

[node name="EnsembleReglages2" parent="." instance=ExtResource( 8 )]
visible = false

[node name="contraste" parent="EnsembleReglages2" index="1"]
focus_neighbour_top = NodePath("../../EnsembleReglages/lum")

[node name="btonReinitialiser" parent="EnsembleReglages2" index="6"]
margin_bottom = 387.0
focus_neighbour_left = NodePath("../../EnsembleReglages/lum")
focus_neighbour_bottom = NodePath("../../VBoxContainer/Reglages")
texture_normal = ExtResource( 10 )
texture_focused = ExtResource( 12 )

[node name="reinitialiser" parent="EnsembleReglages2/btonReinitialiser" index="0"]
margin_left = -238.0
margin_right = 102.0

[connection signal="pressed" from="VBoxContainer/Langues" to="VBoxContainer/Langues" method="_on_Langues_pressed"]
[connection signal="pressed" from="VBoxContainer/Reglages" to="VBoxContainer/Langues" method="_on_Reglages_pressed"]
[connection signal="pressed" from="VBoxContainer/Retour" to="VBoxContainer/Langues" method="_on_Retour_pressed"]
[connection signal="pressed" from="GestionLangues/Francais" to="VBoxContainer/Langues" method="_on_Francais_pressed"]
[connection signal="pressed" from="GestionLangues/Anglais" to="VBoxContainer/Langues" method="_on_Anglais_pressed"]
[connection signal="pressed" from="GestionLangues/Retour2" to="VBoxContainer/Langues" method="_on_Retour2_pressed"]
[connection signal="value_changed" from="EnsembleReglages/Musique" to="VBoxContainer/Langues" method="_on_Musique_value_changed"]

[editable path="EnsembleReglages"]
[editable path="EnsembleReglages2"]
